# claw-code-parity

./: .gitignore  session.txt
.claw/sessions/: session-1775066451296.json  session-1775067685379.json  session-1775067709685.json  session-1775068917391.json
rust/crates/api/src/: client.rs  lib.rs
rust/crates/api/src/providers/: claw_provider.rs  mod.rs
rust/crates/claw-cli/: Cargo.toml
rust/crates/claw-cli/src/: input.rs  main.rs  render.rs
rust/crates/claw-cli/src/tui/: app.rs  client.rs  events.rs  mod.rs  ui.rs
rust/crates/claw-cli/src/tui/widgets/: message_list.rs  mod.rs
rust/crates/commands/src/: lib.rs
