[package]
name = "claw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "claw"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
commands = { path = "../commands" }
compat-harness = { path = "../compat-harness" }
crossterm = { version = "0.28", features = ["event-stream"] }
pulldown-cmark = "0.13"
ratatui = { version = "0.29", features = ["crossterm"] }
rustyline = "15"
runtime = { path = "../runtime" }
plugins = { path = "../plugins" }
serde_json.workspace = true
syntect = "5"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }
tokio-stream = "0.1"
tools = { path = "../tools" }
tui-textarea = "0.7"
unicode-width = "0.2"

[lints]
workspace = true
